; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_expr.c_mostly_zeros_p.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_expr.c_mostly_zeros_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CONSTRUCTOR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @mostly_zeros_p to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mostly_zeros_p(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i64 @TREE_CODE(i32 %8)
  %10 = load i64, i64* @CONSTRUCTOR, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %27

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @categorize_ctor_elements(i32 %13, i32* %4, i32* %5, i32* %7)
  %15 = load i32, i32* %7, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %12
  store i32 1, i32* %2, align 4
  br label %30

18:                                               ; preds = %12
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @TREE_TYPE(i32 %19)
  %21 = call i32 @count_type_elements(i32 %20, i32 0)
  store i32 %21, i32* %6, align 4
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* %6, align 4
  %24 = sdiv i32 %23, 4
  %25 = icmp slt i32 %22, %24
  %26 = zext i1 %25 to i32
  store i32 %26, i32* %2, align 4
  br label %30

27:                                               ; preds = %1
  %28 = load i32, i32* %3, align 4
  %29 = call i32 @initializer_zerop(i32 %28)
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %27, %18, %17
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i64 @TREE_CODE(i32) #1

declare dso_local i32 @categorize_ctor_elements(i32, i32*, i32*, i32*) #1

declare dso_local i32 @count_type_elements(i32, i32) #1

declare dso_local i32 @TREE_TYPE(i32) #1

declare dso_local i32 @initializer_zerop(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
